Athena/wwwroot/Templates/template5/NetworkPolicy/template-external-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: external-policy
  labels:
    lab: example
spec:
  podSelector:
    matchLabels:
      lab: example
      net: external
  ingress:
    - from:
      - podSelector:
          matchLabels: 
            lab: example
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
  egress:
    - to: 
      - podSelector:
          matchLabels:
            lab: example
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
